--- a/public/html/assignment.html
+++ b/public/html/assignment.html
@@ -61,14 +61,14 @@
                         </div>
                         <div class="form-group">
                             <label for="assignmentPointValue">Assignment Point Value</label>
-                            <input type="value" class="form-control" id="assignmentPointValue"
+                            <input type="value" class="form-control" id="assignmentPoints"
                                 placeholder="Enter Point Value">
                         </div>
                     </div>
                     <div class="col-sm">
                         <div class="form-group">
                             <label for="assignmentDueDate">Assignment Due Date</label>
-                            <input type="date" class="form-control" id="assignmentDueDate" placeholder="Enter Due Date">
+                            <input type="date" class="form-control" id="assignmentDue" placeholder="Enter Due Date">
                         </div>
                         <div class="form-group">
                             <label for="assignmentSubject">Subject</label>
@@ -87,13 +87,16 @@
             </div>
         </form>
     </div>
+    <div class="jumbotron">
+        <h1 class="display-4">Adding New Assignment</h1>
 
-    // page also has every asignment listed as well as two buttons for each assignment which are
-    // edit and grade
-
-    
-
-    <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
+        <div class="container" id="display-assignments">
+            <table class="table table-sm table-hover table-striped table-borderless table-hover">
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+        <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
 </body>
 
 
