--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -25,6 +25,7 @@
   <script src="../js/teacherLanding.js"></script>
   <!--JS for landing page-->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <link rel = "stylesheet" href ="../styles/teacherLand.css">
 
 </head>
 <!-- ############ Nav Bar ############ -->
@@ -66,7 +67,7 @@
 </nav>
 
 <body>
-  <div class="container-fluid">
+  <div class="container mx-auto my-0" style="width: 90%;">
     <div class="row">
       <div class="col-3">
         <div class="row">
@@ -77,13 +78,13 @@
         </div>
       </div>
       <div class="col-9">
-        <h1 class="display-4 text-center bg-light">Chart Goes Here</h1>
         <canvas id="myChart"></canvas>
+        <h1 class="display-4 text-center bg-light">Chart Goes Here</h1>
       </div>
     </div>
   </div>
 
-  <script type="text/javascript" src="../js/firebase.js"></script>
+  <script src="../js/firebase.js"></script>
 
 </body>
 
