--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -16,6 +16,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title" charset="utf-8">
@@ -50,8 +52,37 @@
 </nav>
 
 <body>
-    // INDIVIDUAL STUDENTS page will take you to one particular students complete list of assignments
+
+    <div class="container mt-3">
+        <div class="d-flex m-3">
+            <div class="dropdown mr-1">
+                <button type="button" class="btn btn-secondary dropdown-toggle" id="studentDropDown"
+                    data-toggle="dropdown" data-offset="10,20">
+                    Students
+                </button>
+                <div class="dropdown-menu" id="individualStudentChoices" aria-labelledby="dropdownMenuOffset">
+                </div>
+            </div>
+        </div>
+        <div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Assignment</th>
+                        <th scope="col">Grade</th>
+                    </tr>
+                </thead>
+                <tbody id="studentTable">
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+
     <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
+    <script type="text/javascript" src="../js/individualStudent.js"></script>
+
 </body>
 
 
