--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -48,6 +48,9 @@
       <li class="nav-item mr-2" id="addNewAssign">
         <span class="nav-link">Add New Assignment</span>
       </li>
+      <li>
+        <a href="/student" class="nav-link">One Student</a>
+      </li>
 
       <li class="nav-item mr-2" id="navLogout">
         <span class="nav-link">Log out</span>
