--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -52,6 +52,32 @@
 </nav>
 
 <body>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalHeader"></h5>
+                    <small id="assignmentNameModal"></small>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="newGrade">Grade</label>
+                            <input type="number" class="form-control" id="newGrade">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="newGradeButton">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container mt-3">
         <div class="d-flex m-3">
@@ -67,7 +93,7 @@
         <div>
             <div>
                 <h2 class="text-center" id="studentNameDisplay">
-                    Name: 
+                    Name:
                 </h2>
             </div>
             <table class="table">
