--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -71,7 +71,7 @@
     <div class="row">
       <div class="col-5">
         <div class="container">
-          <table class="table table-sm table-hover table-striped table-borderless table-hover">
+          <table class="table table-sm table-hover table-striped table-borderless table-hover text-center">
             <thead>
               <th scope="col">#</th>
               <th scope="col">Name</th>
