--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -80,7 +80,7 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="../js/firebaseteacher.js"></script>
+  <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
 </body>
 
 </html>
